[gd_scene load_steps=3 format=3 uid="uid://lriy17o7lrei"]

[ext_resource type="Script" path="res://Scenes/card_collection.gd" id="1_vwka3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xin7e"]

[node name="CardCollection" type="Node2D"]
script = ExtResource("1_vwka3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xin7e")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AttackLabel" type="Label" parent="."]
offset_left = -42.0
offset_top = 12.0
offset_right = -2.0
offset_bottom = 35.0

[node name="HealthLabel" type="Label" parent="."]
offset_left = 36.0
offset_top = 13.0
offset_right = 76.0
offset_bottom = 36.0

[node name="LevelLabel" type="Label" parent="."]
offset_left = -4.0
offset_top = -46.0
offset_right = 21.0
offset_bottom = -23.0

[node name="NameLabel" type="Label" parent="."]
offset_left = -17.0
offset_top = 31.0
offset_right = 23.0
offset_bottom = 54.0
